
1.20 (UNRELEASED)
-----------------
Improvements:
 - Add support for -w/--window option which will enable user to select a
   window as a target for filing a problem report. Thanks Abhinav Upadhyay for
   the patch! (LP: #357847)
 - Disable the filtering on SIGABRT without assertion messages. Turns out that
   developers want these crash reports after all.

Bug fixes:
 - report.py, add_hooks_info(): Properly report TypeErrors from hooks.
 - apport-retrace: Intercept SystemErrors from ill-formed gzip attachments as
   well.
 - Fix crash if crash database configuration does not specify a
   bug_pattern_url. Just assume None. (LP: #731526)
 - If a custom crash database does not specify a bug_pattern_url, fall back to
   using the default database's. (LP: #731526)
 - hookutils.py Update WifiSyslog regex to correctly catch application log
   messages in syslog. Thanks Mathieu Trudel-Lapierre. (LP: #732917)
 - hookutils.py, attach_hardware(): Avoid error message if machine does not
   have a PCI bus. Thanks Marcin Juszkiewicz! (LP: #608449)
 - backends/packaging-apt-dpkg.py: Replace deprecated getChanges() call with
   get_changes().

1.19 (2011-02-28)
-----------------
Bug fixes:
 - Update stack unwind patterns for current glib (slightly changed function
   names), and also ignore a preceding '*'. (LP: #716251)
 - Fix crash_signature() to fail if there is an empty or too short
   StacktraceTop.
 - apt backend: Do not generate a warning if the opportunistically added -dbg
   package does not exist.
 - apt backend: Only add -dbg in --no-pkg mode, as there will be conflicts in
   normal package mode.
 - apt backend: Call tar with target cwd instead of using -C; the latter causes
   an extra openat() call which breaks with current fakechroot.
 - launchpad.py: Fix retracer crash if DistroRelease field does not exist.
 - Convert deprecated failIf()/assert_() TestCase method calls to
   assertFalse()/assertTrue().

Improvements: